--- a/assets/scss/components/banners/banner-1.css
+++ b/assets/scss/components/banners/banner-1.css
@@ -14,14 +14,25 @@
 .banner-img-1 {
   position: absolute;
   bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.inner-banner-img-1 {
+  display: inline-block;
+  position: relative;
 }
 
 .banImg1 {
   height: 76vh;
   position: relative;
   z-index: 10;
+}
+
+.img-ini-size {
+  opacity: 0;
+  width: 100%;
 }
 
 .bg-img-1 {
