--- a/assets/scss/components/home/_animations.scss
+++ b/assets/scss/components/home/_animations.scss
@@ -7,7 +7,19 @@
     ;
 }
 
-.banner-img-1 .start {
+.home-section-2 .start:before {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 80%;
+    height: 77%;
+    content: "";
+
+
+    border-radius: 10px;
+}
+
+.start:before {
     transition-delay: 0s;
     transition-duration: 1s;
     transition-property: all;
@@ -44,8 +56,9 @@ body.home-animation {
 
 .home-section-2 {
     position: absolute;
-    top: 200px;
+    padding-top: 50px !important;
     left: 0;
+    top: 200px;
     width: 100%;
     height: 100%;
 
@@ -97,27 +110,43 @@ body.home-animation {
 .bg-img-1 {
 
 
-    transition-delay: 0s;
-    transition-duration: 1s;
+    transition-delay: 0.1s;
+    transition-duration: 1.3s;
     transition-property: all;
-    transition-timing-function: ease;
-    -webkit-transition-delay: 0s;
-    -webkit-transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+    -webkit-transition-delay: 0.1s;
+    -webkit-transition-duration: 1.3s;
     -webkit-transition-property: all;
-    -webkit-transition-timing-function: ease;
-    -moz-transition-delay: 0s;
-    -moz-transition-duration: 1s;
+    -webkit-transition-timing-function: ease-in-out;
+    -moz-transition-delay: 0.1s;
+    -moz-transition-duration: 1.3s;
     -moz-transition-property: all;
-    -moz-transition-timing-function: ease;
-    -ms-transition-delay: 0s;
-    -ms-transition-duration: 1s;
+    -moz-transition-timing-function: ease-in-out;
+    -ms-transition-delay: 0.1s;
+    -ms-transition-duration: 1.3s;
     -ms-transition-property: all;
-    -ms-transition-timing-function: ease;
-    -o-transition-delay: 0s;
-    -o-transition-duration: 1s;
+    -ms-transition-timing-function: ease-in-out;
+    -o-transition-delay: 0.1s;
+    -o-transition-duration: 1.3s;
     -o-transition-property: all;
-    -o-transition-timing-function: ease;
+    -o-transition-timing-function: ease-in-out;
 
+}
+
+.slider-item-style-1.start {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.banImg1 {
+    opacity: 0 !important;
+}
+
+.destination {
+    display: inline-block;
 }
 
 .home-animation {
@@ -129,6 +158,22 @@ body.home-animation {
         opacity: 1;
         visibility: visible;
 
+    }
+
+    .start {
+        // background: url('../images/home/banner/bg-ban.jpg') bottom center / cover;
+        border-radius: 35px;
+        overflow: hidden;
+
+        transform: translate(0, 0) !important;
+
+        &:before {
+            display: block;
+            height: 100%;
+            width: 100%;
+            border-radius: 35px;
+            background: url(../images/home/banner/bg-ban.jpg) bottom center / cover;
+        }
     }
 
     .bg-img-1 {
