--- a/assets/scss/components/home/_home.scss
+++ b/assets/scss/components/home/_home.scss
@@ -1,5 +1,9 @@
 .swiper-container {
-    height: 400px;
+    // height: 400px;
+}
+
+.slider-item-style-1 {
+    position: relative;
 }
 
 .swiper-slide {
@@ -21,7 +25,7 @@
 }
 
 .slider-item-style-1 .img img {
-    height: 30rem;
+    // height: 30rem;
     width: 100%;
     object-fit: cover;
 }
@@ -29,6 +33,12 @@
 .swiper-pagination {
     bottom: -3.5rem !important;
     top: auto !important
+}
+
+.home-section-2 .slider-item-style-1 .img {
+    height: 100%;
+    display: flex;
+    align-items: end;
 }
 
 .home-section-2 .swiper-pagination {
