--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1682,14 +1682,25 @@ select {
 .banner-img-1 {
   position: absolute;
   bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.inner-banner-img-1 {
+  display: inline-block;
+  position: relative;
 }
 
 .banImg1 {
   height: 76vh;
   position: relative;
   z-index: 10;
+}
+
+.img-ini-size {
+  opacity: 0;
+  width: 100%;
 }
 
 .bg-img-1 {
@@ -1901,8 +1912,8 @@ select {
   text-align: center;
 }
 
-.swiper-container {
-  height: 400px;
+.slider-item-style-1 {
+  position: relative;
 }
 
 .swiper-slide {
@@ -1923,7 +1934,6 @@ select {
 }
 
 .slider-item-style-1 .img img {
-  height: 30rem;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -1932,6 +1942,12 @@ select {
 .swiper-pagination {
   bottom: -3.5rem !important;
   top: auto !important;
+}
+
+.home-section-2 .slider-item-style-1 .img {
+  height: 100%;
+  display: flex;
+  align-items: end;
 }
 
 .home-section-2 .swiper-pagination {
@@ -2474,7 +2490,17 @@ select {
   display: none;
 }
 
-.banner-img-1 .start {
+.home-section-2 .start:before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 80%;
+  height: 77%;
+  content: "";
+  border-radius: 10px;
+}
+
+.start:before {
   transition-delay: 0s;
   transition-duration: 1s;
   transition-property: all;
@@ -2511,8 +2537,9 @@ body.home-animation {
 
 .home-section-2 {
   position: absolute;
-  top: 200px;
+  padding-top: 50px !important;
   left: 0;
+  top: 200px;
   width: 100%;
   height: 100%;
 }
@@ -2556,26 +2583,42 @@ body.home-animation {
 }
 
 .bg-img-1 {
-  transition-delay: 0s;
-  transition-duration: 1s;
+  transition-delay: 0.1s;
+  transition-duration: 1.3s;
   transition-property: all;
-  transition-timing-function: ease;
-  -webkit-transition-delay: 0s;
-  -webkit-transition-duration: 1s;
+  transition-timing-function: ease-in-out;
+  -webkit-transition-delay: 0.1s;
+  -webkit-transition-duration: 1.3s;
   -webkit-transition-property: all;
-  -webkit-transition-timing-function: ease;
-  -moz-transition-delay: 0s;
-  -moz-transition-duration: 1s;
+  -webkit-transition-timing-function: ease-in-out;
+  -moz-transition-delay: 0.1s;
+  -moz-transition-duration: 1.3s;
   -moz-transition-property: all;
-  -moz-transition-timing-function: ease;
-  -ms-transition-delay: 0s;
-  -ms-transition-duration: 1s;
+  -moz-transition-timing-function: ease-in-out;
+  -ms-transition-delay: 0.1s;
+  -ms-transition-duration: 1.3s;
   -ms-transition-property: all;
-  -ms-transition-timing-function: ease;
-  -o-transition-delay: 0s;
-  -o-transition-duration: 1s;
+  -ms-transition-timing-function: ease-in-out;
+  -o-transition-delay: 0.1s;
+  -o-transition-duration: 1.3s;
   -o-transition-property: all;
-  -o-transition-timing-function: ease;
+  -o-transition-timing-function: ease-in-out;
+}
+
+.slider-item-style-1.start {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.banImg1 {
+  opacity: 0 !important;
+}
+
+.destination {
+  display: inline-block;
 }
 
 .home-animation .heading-2,
@@ -2584,6 +2627,18 @@ body.home-animation {
 .home-animation .slider-item-1-content {
   opacity: 1;
   visibility: visible;
+}
+.home-animation .start {
+  border-radius: 35px;
+  overflow: hidden;
+  transform: translate(0, 0) !important;
+}
+.home-animation .start:before {
+  display: block;
+  height: 100%;
+  width: 100%;
+  border-radius: 35px;
+  background: url(../images/home/banner/bg-ban.jpg) bottom center/cover;
 }
 .home-animation .bg-img-1 {
   width: 400vw;
