--- a/assets/scss/components/header/_eman.scss
+++ b/assets/scss/components/header/_eman.scss
@@ -17,11 +17,13 @@ body {
     color: black;
     line-height: 5rem;
 }
-.slider-text{
+
+.slider-text {
     font-weight: 500 !important;
     font-size: 0.7rem !important;
     color: black;
 }
+
 .footer-section p,
 .footer-section .desc {
     font-size: 1rem !important;
@@ -104,9 +106,11 @@ body {
     color: #E4E7EC;
     opacity: 90%;
 }
-.accordion-button:not(.collapsed){
+
+.accordion-button:not(.collapsed) {
     box-shadow: unset !important;
 }
+
 .helpsection-questions-answer {
     color: #344051;
     font-weight: 400;
@@ -257,15 +261,19 @@ a.button-1 {
     height: unset !important;
     padding: 0.5rem;
 }
-.nav-link{
+
+.nav-link {
     font-weight: 500;
 }
+
 .block-blue {
     background-color: #F0F4FF !important;
 }
-.blockyellow{
+
+.blockyellow {
     background-color: #FFF1E6 !important;
 }
+
 .tag-yellow {
     background-color: #FFEECC !important;
     color: #B37520 !important;
@@ -275,27 +283,33 @@ a.button-1 {
 body .securepayment .block-slider .block-yellow {
     background-color: #FFF9EB !important;
 }
-#aboutus-slider-1 .swiper-slide{
+
+#aboutus-slider-1 .swiper-slide {
     width: 350px !important
 }
 
-.slider-item-style-1  .img{
+.slider-item-style-1 .img {
     background-color: #4c8fcc;
     border-radius: 35px;
 }
-.team-item{
+
+.team-item {
     width: 270px;
     text-align: center;
 }
-.team-item .info{
+
+.team-item .info {
     text-align: left !important;
 }
-#aboutus-slider-1 .swiper-slide .heading-5{
-    left:unset  !important;
+
+#aboutus-slider-1 .swiper-slide .heading-5 {
+    left: unset !important;
 }
+
 body .securepayment .block-slider .block-bl {
     background-color: #E5EEFF !important;
 }
+
 // .whyMatensa .block .text-3 img{
 //     width: 4rem;
 //     margin-right: 0.5rem;
@@ -496,14 +510,17 @@ body .securepayment .block-slider .block-bl {
     font-size: 1.4rem;
     font-weight: 700;
 }
-.info-name.highlight-content{
+
+.info-name.highlight-content {
     font-size: 1.6rem !important;
     color: black;
 }
-.whyMatensa .block .text-3 div{
+
+.whyMatensa .block .text-3 div {
     align-self: center;
     margin-left: 0.5rem;
 }
+
 .highlight-text {
     font-weight: 500;
     font-size: 1.2rem;
@@ -611,9 +628,11 @@ body .securepayment .block-slider .block-bl {
     padding-bottom: 0;
     height: auto;
 }
-.join-team .heading-2{
+
+.join-team .heading-2 {
     font-weight: 600 !important;
 }
+
 .info-name {
     font-size: 1rem;
     font-weight: 700;
@@ -741,10 +760,11 @@ body .securepayment .block-slider .block-bl {
     font-size: 0.8rem;
 }
 
-.salary .job-date{
+.salary .job-date {
     font-weight: 500;
-    color:#344051;
+    color: #344051;
 }
+
 .job-det {
     font-size: 0.6rem;
     color: #637083;
@@ -789,9 +809,11 @@ select {
 .pagyment-gatway-section {
     background-color: #F2F4F7;
 }
-.pagyment-gatway-section p{
+
+.pagyment-gatway-section p {
     font-size: 1.12rem !important;
 }
+
 .footer-section .container:nth-child(1) {
     border-bottom: 1px solid #8080803d;
     padding-bottom: 1rem
@@ -800,22 +822,27 @@ select {
 .marginright {
     margin-right: 1rem;
 }
-.copy-r{
-    color:#141C24 ;
+
+.copy-r {
+    color: #141C24;
     font-weight: 500;
 }
-.text-half{
+
+.text-half {
     margin: auto;
     width: 70%;
 }
-.footer-section p{
+
+.footer-section p {
     color: black !important;
 }
-.footer-section .desc a{
+
+.footer-section .desc a {
     font-weight: 500 !important;
     color: #344051 !important;
     font-size: 1rem !important;
 }
+
 .header-height {
     height: 40px !important;
 }
@@ -884,9 +911,11 @@ select {
     text-transform: unset !important;
     min-width: 10rem !important;
 }
-.methods{
+
+.methods {
     font-size: 1.2rem;
 }
+
 .button-3 {
     border: 1px solid #CED2DA;
     background-color: #F9FAFB;
@@ -899,17 +928,21 @@ select {
     text-transform: unset !important;
     margin-top: 1rem;
 }
-.socialicons a{
+
+.socialicons a {
     margin-right: 1rem;
 }
-.highdets{
+
+.highdets {
     font-size: 2rem !important;
     color: black;
 }
+
 .salary .date-1 {
     font-size: 1.2rem !important;
 }
-input[type=checkbox]{
+
+input[type=checkbox] {
     margin-right: 1rem;
     width: 1rem;
     height: 1rem;
@@ -919,30 +952,38 @@ input[type=checkbox]{
     font-weight: 500;
     font-size: 1.1rem;
 }
-.empower .heading-2{
-font-size: 3.7rem !important;
+
+.empower .heading-2 {
+    font-size: 3.7rem !important;
 }
-.empower .width-100{
+
+.empower .width-100 {
     width: 75% !important;
 }
-.applydiv{
+
+.applydiv {
     width: 70%;
     margin: auto;
 }
-.apply-now .text-5.info-name{
+
+.apply-now .text-5.info-name {
     font-size: 1.5rem !important;
     font-weight: 600 !important;
 }
-.heading-2{
+
+.heading-2 {
     line-height: 60px !important;
 }
-.applydiv .job-det{
-font-size: 0.8rem !important;
+
+.applydiv .job-det {
+    font-size: 0.8rem !important;
 }
-.applydiv .heading-4{
-font-size: 2.2rem !important;
-font-weight: 600 !important;
+
+.applydiv .heading-4 {
+    font-size: 2.2rem !important;
+    font-weight: 600 !important;
 }
+
 .apply-now input[type=text] {
 
     font-size: 1rem;
@@ -960,12 +1001,15 @@ font-weight: 600 !important;
 .width-100 {
     width: 100% !important;
 }
-.width-80{
+
+.width-80 {
     width: 80% !important;
 }
+
 .h2-style-1 {
     font-size: 3.7rem !important;
 }
+
 .image-11 {
     position: absolute;
     right: -6rem !important
@@ -1025,10 +1069,12 @@ font-weight: 600 !important;
 .securepayment .block {
     max-width: 50%;
 }
-.block-slider1{
+
+.block-slider1 {
     grid-gap: 5rem !important;
     width: 70% !important;
 }
+
 .team-content {
     position: absolute;
 
@@ -1075,25 +1121,31 @@ font-weight: 600 !important;
     color: white;
     text-align: left;
 }
-.team-position{
+
+.team-position {
     color: #CACACA !important;
     font-size: 0.8rem !important;
 }
-.highlights .block-2 .heading-4{
+
+.highlights .block-2 .heading-4 {
     font-size: 1.1rem !important;
     margin-bottom: 0.5rem;
 }
-.join-team .heading-2{
+
+.join-team .heading-2 {
     font-size: 3rem !important;
-    line-height: 60px ;
+    line-height: 60px;
 }
-.salary .job-det{
+
+.salary .job-det {
     font-size: 0.75rem;
     font-weight: 500;
 }
-.join-team p.mt-4{
-   font-size:  1.125rem !important ;
+
+.join-team p.mt-4 {
+    font-size: 1.125rem !important;
 }
+
 .team-brief,
 .team-position {
     opacity: 0.7;
@@ -1132,19 +1184,23 @@ font-weight: 600 !important;
     font-size: 1.5rem !important;
     font-weight: 600 !important;
 }
+
 .row.stay-connectedrow {
-width: 90%;
-margin: auto !important;
+    width: 90%;
+    margin: auto !important;
 
 }
-.swiper-container-3 .swiper-slide .text-2{
-font-size: 1.2rem !important;
+
+.swiper-container-3 .swiper-slide .text-2 {
+    font-size: 1.2rem !important;
 }
-.securepayment .block-slider1 .block .heading-6{
-font-size: 1.25rem !important;
-font-weight: 400;
-line-height: 28px;
+
+.securepayment .block-slider1 .block .heading-6 {
+    font-size: 1.25rem !important;
+    font-weight: 400;
+    line-height: 28px;
 }
+
 .securepayment .heading-6 {
     padding: unset !important;
 }
@@ -1285,47 +1341,61 @@ line-height: 28px;
 .text-10 {
     font-size: 11rem !important;
 }
-.warning-block .heading-4{
+
+.warning-block .heading-4 {
     font-size: 1.25rem !important;
 }
-.half-div .heading-1,.head-0{
+
+.half-div .heading-1,
+.head-0 {
     font-weight: 600 !important;
 }
-.accordion-button:not(.collapsed){
+
+.accordion-button:not(.collapsed) {
     background-color: unset !important;
 }
-.accordion-item:first-of-type{
+
+.accordion-item:first-of-type {
     border-left: unset;
-    border-top: unset ;
+    border-top: unset;
     border-right: unset;
     border-top-left-radius: unset !important;
     border-top-right-radius: unset !important;
     border-bottom-left-radius: unset !important;
     border-bottom-right-radius: unset !important;
 }
-.half-div .form-group{
+
+.half-div .form-group {
     text-align: left !important;
 }
-.terms .heading-1{
+
+.terms .heading-1 {
     font-weight: 600;
 }
-.highlightdetails .heading-1{
+
+.highlightdetails .heading-1 {
     font-size: 1.5rem !important;
     font-weight: 500;
 }
-.morearticles .highlight-content, .morearticles .highlight-text{
-   font-size: 1rem !important;
+
+.morearticles .highlight-content,
+.morearticles .highlight-text {
+    font-size: 1rem !important;
 }
+
 .image-14 {
     border-radius: 16px;
 }
-.KeyBenefits .block-2 .text-4{
+
+.KeyBenefits .block-2 .text-4 {
     font-size: 1.12rem !important;
 }
-.KeyBenefits .text-4{
+
+.KeyBenefits .text-4 {
     font-size: 1.5rem !important;
     color: #344051 !important;
 }
+
 .image-13 {
     border-radius: 16px;
     margin-top: 7rem;
@@ -1369,10 +1439,10 @@ line-height: 28px;
         right: 1rem !important;
     }
 
- .contact-info{
-    border-top-left-radius: unset !important; 
-     border-bottom-left-radius: unset !important;
- }
+    .contact-info {
+        border-top-left-radius: unset !important;
+        border-bottom-left-radius: unset !important;
+    }
 
     .container {
         padding-right: 25px !important;
@@ -1390,44 +1460,55 @@ line-height: 28px;
     // img {
     //     margin-top: 2rem;
     // }
-    .slider-item-1-card{
+    .slider-item-1-card {
         width: 80%;
         margin: auto;
         padding: 0.7rem 0.8rem;
-      
+
     }
+
     .block {
         max-width: 100%;
     }
-    .slider-item-1-card p{
+
+    .slider-item-1-card p {
         font-size: 1rem !important;
     }
+
     .KeyBenefits img {
         display: none;
     }
-    .highlights img{
+
+    .highlights img {
         margin-top: 2rem;
         margin-bottom: 1rem;
     }
-    #aboutus-slider-2 .swiper-button-next-swiper-testimonoals{
+
+    #aboutus-slider-2 .swiper-button-next-swiper-testimonoals {
         right: 0 !important;
     }
-    #aboutus-slider-2 .swiper-button{
+
+    #aboutus-slider-2 .swiper-button {
         left: unset !important;
     }
+
     .dropdown-item {
         font-size: 1.8rem !important;
         text-align: center;
     }
-    .dropdown-toggle:hover{
+
+    .dropdown-toggle:hover {
         margin-bottom: 0rem !important;
     }
-    .home-blk-3-content img{
+
+    .home-blk-3-content img {
         margin-top: 1rem;
     }
-.main-slide{
-    margin-top: 2rem;
-}
+
+    .main-slide {
+        margin-top: 2rem;
+    }
+
     .highlights .block-2 {
         display: unset !important;
     }
@@ -1453,36 +1534,46 @@ line-height: 28px;
     .welcome .heading-6 {
         padding: unset !important;
     }
+
     .payment-gateway span img {
-        max-width: 50% !important;
+        max-width: 80% !important;
     }
-    .methods{
+
+    .methods {
         margin-bottom: 2rem;
-    font-size: 2rem;
+        font-size: 2rem;
     }
-    .business img{
+
+    .business img {
         margin-top: 2rem;
     }
-    .numbering{
+
+    .numbering {
         padding-top: 1rem;
         margin: auto;
     }
-    .salary{
+
+    .salary {
         text-align: center;
     }
-    .icon-2{
+
+    .icon-2 {
         padding: unset !important;
     }
-    .salary .share{
+
+    .salary .share {
         text-align: left !important;
     }
-    .salary img{
+
+    .salary img {
         width: unset !important;
         margin-top: 1rem;
     }
-    .job-detail{
+
+    .job-detail {
         margin-left: unset !important;
     }
+
     .map {
         width: unset !important;
     }
@@ -1500,15 +1591,20 @@ line-height: 28px;
         flex: unset !important;
         width: 100%;
     }
-.firstimage img{
-    margin-top: 3rem;
-}
-.apply-now .job-det, .apply-now .heading-4 {
-    margin-left: -5px !important;
-}
-.business .journey{
-    padding-top: 0rem !important;
-}
+
+    .firstimage img {
+        margin-top: 3rem;
+    }
+
+    .apply-now .job-det,
+    .apply-now .heading-4 {
+        margin-left: -5px !important;
+    }
+
+    .business .journey {
+        padding-top: 0rem !important;
+    }
+
     .salary .fa-map-marker-alt {
         padding-top: 1rem;
     }
@@ -1594,12 +1690,15 @@ line-height: 28px;
     .mockupimage {
         display: none;
     }
-    .heading-6{
+
+    .heading-6 {
         padding: unset !important;
     }
-.BigText{
-    padding-bottom: unset !important;
-}
+
+    .BigText {
+        padding-bottom: unset !important;
+    }
+
     .manageagreements img {
         margin-left: unset !important;
         margin-top: unset !important;
@@ -1620,11 +1719,13 @@ line-height: 28px;
     body {
         font-size: 14px;
     }
-    .image-10{
+
+    .image-10 {
         display: none;
     }
 }
-.securepayment .block .heading-6{
+
+.securepayment .block .heading-6 {
     padding-bottom: 1rem !important;
     font-size: 1.4rem !important;
 }
@@ -1661,7 +1762,8 @@ line-height: 28px;
 .file-input {
     display: none;
 }
-.slider-item-1-card span{
+
+.slider-item-1-card span {
     margin-left: auto !important;
     font-size: 1.5rem !important;
 }
