--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1799,6 +1799,9 @@ input[type=checkbox] {
   .salary {
     text-align: center;
   }
+  .applydiv {
+    width: unset !important;
+  }
   .icon-2 {
     padding: unset !important;
   }
@@ -1831,13 +1834,16 @@ input[type=checkbox] {
   }
   .apply-now .job-det,
   .apply-now .heading-4 {
-    margin-left: -5px !important;
+    margin-left: 1rem !important;
   }
   .business .journey {
     padding-top: 0rem !important;
   }
   .salary .fa-map-marker-alt {
     padding-top: 1rem;
+  }
+  .apply-now input, .apply-now textarea {
+    margin-top: 1rem;
   }
   .salary .col-lg-5 {
     border-left: unset !important;
